# DrivePX2_Recognition

./: CMakeLists.txt  main.cpp
data/: ipmMat.xml
src/: common_cv.h  fittingAlgorithm.cpp  fittingAlgorithm.h  px2camlib.cu  px2camlib.h  px2ld.cu  px2ld.h  px2od.cu  px2od.h
